--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant(len(['price])) > alternative "
+    "    if restaurant(len(['price])) > alternative(len['pr']) "
    ]
   },
   {
