--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant(len(['price])) > alternative(len['price']) "
+    "    if restaurant(len(['price])) > alternative(len(['price']))\n",
+    "                       return "
    ]
   },
   {
