--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
     "    if len(restaurant['price]) > len(alternative['price'])\n",
     "            return restaurant\n",
     "        else:\n",
-    "                      \n",
+    "            return al\n",
     "                      "
    ]
   },
