--- a/index.ipynb
+++ b/index.ipynb
@@ -188,24 +188,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 4)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-7aa7eb8231bb>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-7aa7eb8231bb>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if len(restaurant['price]) > len(alternative['price'])\u001b[0m\n\u001b[0m                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price]) > len(alternative['price'])\n",
-    "            return restaurant\n",
-    "        else:\n",
-    "            return alternative\n",
+    "        return restaurant\n",
+    "    else:\n",
+    "        return alternative\n",
     "                      "
    ]
   },
