--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    o"
+    "    open = [\n",
+    "        \n",
+    "    "
    ]
   },
   {
