--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for restaurant"
+    "    for restaurant in restaurants"
    ]
   },
   {
